runtime home with tests